# QA_EKO_LLM

./: README.md  pyproject.toml  requirements.txt
data/: Audiotur - TEKSTY_LB_RZ_v3 - KOR ŁB.docx
qa_eko_llm/: utils.py
qa_eko_llm/development/notebooks/: predict_v1.ipynb
