[tool.poetry]
name = "QA-eko-llm-poc"
version = "0.1.0"
description = ""
authors = ["Ekobilet ML TEAM"]
readme = "README.md"
packages = [{include = "qa_eko_llm"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "1.5.3"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
langchain = "^0.0.222"
kor = "^0.11.0"
ipykernel = "^6.24.0"
jsonlines = "^3.1.0"
typing-extensions = "4.5.0"
pydantic = "1.10.8"
faiss-cpu = "^1.7.4"
tiktoken = "^0.4.0"
datasets = "^2.14.2"
huggingface-hub = "^0.16.4"
trl = "^0.4.7"
transformers = "^4.31.0"
accelerate = "^0.21.0"
peft = "^0.4.0"
bitsandbytes = "^0.41.0"
einops = "^0.6.1"
torch = "1.13.1"
docx2txt = "^0.8"
unstructured = "^0.9.0"
docx = "^0.2.4"


[tool.poetry.group.dev.dependencies]
dvc = {extras = ["s3"], version = "^3.4.0"}
jupyterlab = "^4.0.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
